develop/source-code/tools/expressions/src/com/zte/exp/json/JSONParser.java
// Generated from JSON.g4 by ANTLR 4.1
package com.zte.exp.json;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNSimulator;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class JSONParser extends Parser
{
    public static final int
            T__8 = 1, T__7 = 2, T__6 = 3, T__5 = 4, T__4 = 5, T__3 = 6, T__2 = 7, T__1 = 8, T__0 =
            9,
            STRING = 10, NUMBER = 11, WS = 12;
    public static final String[] tokenNames = {
            "<INVALID>", "']'", "'{'", "'null'", "','", "'['", "':'", "'false'", "'}'",
            "'true'", "STRING", "NUMBER", "WS"
    };
    public static final int
            RULE_json = 0, RULE_object = 1, RULE_pair = 2, RULE_array = 3, RULE_value = 4;
    public static final String[] ruleNames = {
            "json", "object", "pair", "array", "value"
    };
    public static final ATN _ATN =
            ATNSimulator.deserialize(_serializedATN.toCharArray());

    protected static final DFA[] _decisionToDFA;
    static
    {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++)
        {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();

    public JSONParser(TokenStream input)
    {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    public String getGrammarFileName()
    {
        return "JSON.g4";
    }

    @Override
    public String[] getTokenNames()
    {
        return tokenNames;
    }

    @Override
    public String[] getRuleNames()
    {
        return ruleNames;
    }

    @Override
    public ATN getATN()
    {
        return _ATN;
    }

    public final JsonContext json() throws RecognitionException
    {
        JsonContext _localctx = new JsonContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_json);
        try
        {
            setState(12);
            switch (_input.LA(1))
            {
            case 2:
                enterOuterAlt(_localctx, 1);
            {
                setState(10);
                object();
            }
            break;
            case 5:
                enterOuterAlt(_localctx, 2);
            {
                setState(11);
                array();
            }
            break;
            default:
                throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public final ObjectContext object() throws RecognitionException
    {
        ObjectContext _localctx = new ObjectContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_object);
        int _la;
        try
        {
            setState(27);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx))
            {
            case 1:
                enterOuterAlt(_localctx, 1);
            {
                setState(14);
                match(2);
                setState(15);
                pair();
                setState(20);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == 4)
                {
                    {
                        {
                            setState(16);
                            match(4);
                            setState(17);
                            pair();
                        }
                    }
                    setState(22);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(23);
                match(8);
            }
            break;

            case 2:
                enterOuterAlt(_localctx, 2);
            {
                setState(25);
                match(2);
                setState(26);
                match(8);
            }
            break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public final PairContext pair() throws RecognitionException
    {
        PairContext _localctx = new PairContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_pair);
        try
        {
            enterOuterAlt(_localctx, 1);
            {
                setState(29);
                match(STRING);
                setState(30);
                match(6);
                setState(31);
                value();
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public final ArrayContext array() throws RecognitionException
    {
        ArrayContext _localctx = new ArrayContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_array);
        int _la;
        try
        {
            setState(46);
            switch (getInterpreter().adaptivePredict(_input, 4, _ctx))
            {
            case 1:
                enterOuterAlt(_localctx, 1);
            {
                setState(33);
                match(5);
                setState(34);
                value();
                setState(39);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == 4)
                {
                    {
                        {
                            setState(35);
                            match(4);
                            setState(36);
                            value();
                        }
                    }
                    setState(41);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(42);
                match(1);
            }
            break;

            case 2:
                enterOuterAlt(_localctx, 2);
            {
                setState(44);
                match(5);
                setState(45);
                match(1);
            }
            break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public final ValueContext value() throws RecognitionException
    {
        ValueContext _localctx = new ValueContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_value);
        try
        {
            setState(55);
            switch (_input.LA(1))
            {
            case STRING:
                enterOuterAlt(_localctx, 1);
            {
                setState(48);
                match(STRING);
            }
            break;
            case NUMBER:
                enterOuterAlt(_localctx, 2);
            {
                setState(49);
                match(NUMBER);
            }
            break;
            case 2:
                enterOuterAlt(_localctx, 3);
            {
                setState(50);
                object();
            }
            break;
            case 5:
                enterOuterAlt(_localctx, 4);
            {
                setState(51);
                array();
            }
            break;
            case 9:
                enterOuterAlt(_localctx, 5);
            {
                setState(52);
                match(9);
            }
            break;
            case 7:
                enterOuterAlt(_localctx, 6);
            {
                setState(53);
                match(7);
            }
            break;
            case 3:
                enterOuterAlt(_localctx, 7);
            {
                setState(54);
                match(3);
            }
            break;
            default:
                throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally
        {
            exitRule();
        }
        return _localctx;
    }

    public static class JsonContext extends ParserRuleContext
    {
        public JsonContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        public ObjectContext object()
        {
            return getRuleContext(ObjectContext.class, 0);
        }

        public ArrayContext array()
        {
            return getRuleContext(ArrayContext.class, 0);
        }

        @Override public int getRuleIndex()
        {
            return RULE_json;
        }
    }

    public static class ObjectContext extends ParserRuleContext
    {
        public ObjectContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        public List<PairContext> pair()
        {
            return getRuleContexts(PairContext.class);
        }

        public PairContext pair(int i)
        {
            return getRuleContext(PairContext.class, i);
        }

        @Override public int getRuleIndex()
        {
            return RULE_object;
        }
    }

    public static class PairContext extends ParserRuleContext
    {
        public PairContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        public ValueContext value()
        {
            return getRuleContext(ValueContext.class, 0);
        }

        public TerminalNode STRING()
        {
            return getToken(JSONParser.STRING, 0);
        }

        @Override public int getRuleIndex()
        {
            return RULE_pair;
        }
    }

    public static class ArrayContext extends ParserRuleContext
    {
        public ArrayContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        public ValueContext value(int i)
        {
            return getRuleContext(ValueContext.class, i);
        }

        public List<ValueContext> value()
        {
            return getRuleContexts(ValueContext.class);
        }

        @Override public int getRuleIndex()
        {
            return RULE_array;
        }
    }

    public static class ValueContext extends ParserRuleContext
    {
        public ValueContext(ParserRuleContext parent, int invokingState)
        {
            super(parent, invokingState);
        }

        public ObjectContext object()
        {
            return getRuleContext(ObjectContext.class, 0);
        }

        public TerminalNode NUMBER()
        {
            return getToken(JSONParser.NUMBER, 0);
        }

        public TerminalNode STRING()
        {
            return getToken(JSONParser.STRING, 0);
        }

        public ArrayContext array()
        {
            return getRuleContext(ArrayContext.class, 0);
        }

        @Override public int getRuleIndex()
        {
            return RULE_value;
        }
    }
}